syntax = "proto3";

option csharp_namespace = "GrpcService";

package appointmentservice;

service AppointmentService {
  rpc GenerateConfirmationCode (GenerateCodeRequest) returns (GenerateCodeResponse);
}

message GenerateCodeRequest {
  string appointmentId = 1;
  string patientId = 2;
}

message GenerateCodeResponse {
  string confirmationCode = 1;
}
